--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "backend-ts",
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
+    "@types/node": "^20.14.11",
+    "@types/webpack": "^5.28.5",
+    "typescript": "^5.5.4",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   }
