--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/node": "^20.14.11",
     "@types/webpack": "^5.28.5",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
