--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "backend-ts",
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
+    "@types/eslint": "^9.6.0",
     "@types/node": "^20.14.11",
     "@types/webpack": "^5.28.5",
+    "eslint": "^9.7.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "prettier": "^3.3.3",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^7.17.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   }
