--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-webpack-plugin": "^4.2.0",
     "husky": "^9.1.1",
+    "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
