--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/eslint": "^9.6.0",
     "@types/node": "^20.14.11",
     "@types/webpack": "^5.28.5",
+    "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-webpack-plugin": "^4.2.0",
