--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "watch": "webpack --mode=development --watch"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "http-status": "^1.7.4"
   }
 }
