--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "devDependencies": {
     "@types/eslint": "^9.6.0",
     "@types/express": "^4",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.11",
+    "@types/supertest": "^6.0.2",
     "@types/webpack": "^5.28.5",
     "@types/webpack-node-externals": "^3",
     "concurrently": "^8.2.2",
@@ -12,8 +14,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-webpack-plugin": "^4.2.0",
     "husky": "^9.1.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.3",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
