Includes jest.config.ts to eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "lib": ["es2021"],
     "target": "ES2021"
   },
-  "include": ["webpack.config.ts", "src/**/*", "tests/**/*"]
+  "include": ["src/**/*", "tests/**/*", "webpack.config.ts", "jest.config.ts"]
 }
