--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "watch": "webpack --mode=development --watch"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^1.7.4"
   }
