--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
-    "http-status": "^1.7.4"
+    "http-status": "^1.7.4",
+    "mysql2": "^3.11.4"
   }
 }
