--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.11",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "@types/webpack": "^5.28.5",
     "@types/webpack-node-externals": "^3",
     "concurrently": "^8.2.2",
@@ -37,6 +38,7 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "http-status": "^1.7.4",
-    "mysql2": "^3.11.4"
+    "mysql2": "^3.11.4",
+    "uuid": "^11.0.2"
   }
 }
