--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend-ts",
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@types/eslint": "^9.6.0",
     "@types/express": "^4",
     "@types/jest": "^29.5.12",
@@ -16,6 +17,7 @@
     "eslint-webpack-plugin": "^4.2.0",
     "husky": "^9.1.1",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "supertest": "^7.0.0",
