--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "module": "Node16",
     "paths": {
       "@apps/*": ["./src/apps/*"],
+      "@core/*": ["./src/core/*"]
     },
     "resolveJsonModule": true,
     "downlevelIteration": true,
